--- a/webroot/scss/buttons.scss
+++ b/webroot/scss/buttons.scss
@@ -47,18 +47,11 @@
 }
 
 .xtreme-button {
-  @include HelveticaBlkCn;
-  transition: background-color 0.3s ease-in-out;
-  &.rounded { border-radius: $global-rounded;}
-  &.lrg {
-    @include xtreme-button-body("lrg");
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+  color:$white;
+  background-color:$xtreme-blue;
+  &:hover {
+    background-color:lighten($xtreme-blue, 10%);
   }
-  &.sml {
-     font-size:$h5-font-size;
-   }
-  &.yellow-on-black {
-    @include xtreme-button-skin($dark-grey, $xtreme-yellow, $transition-color:$white);
-  }
-  &.hidden { display:none;}
 }
 
