--- a/webroot/scss/_settings.scss
+++ b/webroot/scss/_settings.scss
@@ -5,6 +5,10 @@
 //
 // FOUNDATION SETTINGS
 //
+@font-face {
+  font-family : "Helvetica Neue Condensed Black";
+  src         : url("../files/HelveticaNeueLTStd-BlkCn.otf");
+}
 
 // This is the default html and body font-size for the base rem value.
 // $rem-base: 16px;
@@ -45,7 +49,7 @@ $row-width: rem-calc(1200);
 // We use these to control various global styles
 $body-bg: $body-bg-color;
 $body-font-color: white;
-// $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Helvetica Neue Condensed Black", "Helvetica", Helvetica, Arial, sans-serif;
 $font-weight-normal:normal;
 $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
@@ -59,8 +63,8 @@ $body-font-weight: $font-weight-normal;
 // $default-float: left;
 
 // We use these as default colors throughout
-$primary-color: #008CBA;
-// $secondary-color: #e7e7e7;
+$primary-color:  $xtreme-blue;
+$secondary-color: $dark-grey;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
