--- a/webroot/scss/palette.scss
+++ b/webroot/scss/palette.scss
@@ -17,8 +17,10 @@ $white-a16: rgba(255,255,255,.16);
 $white-a33: rgba(255,255,255,.33);
 $white-a50: rgba(255,255,255,.50);
 $white-a75: rgba(255,255,255,.75);
+$white-a90: rgba(255,255,255,.90);
 $body-bg-color: rgb(223,223,223); // grey averaged from bg-pattern(bullseyes)
 $xtreme-blue:rgb(7,121,190);
+$xtreme-blue-a50:rgba(7,121,190, 0.5);
 $xtreme-red:rgb(224,32,39);
 $xtreme-dark-red:rgb(172,8,25);
 $xtreme-yellow:rgb(250,234,6);
