--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -4489,13 +4489,19 @@ th.hide-for-touch {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-transition: -webkit-transform 1s opacity 0.3s;
+  -webkit-transition: -webkit-transform 1s;
   -moz-transition: -moz-transform 1s;
   -o-transition: -o-transform 1s;
   transition: transform 1s; }
   .html5-3d-context.flipped-x {
+    -webkit-transform: rotateX(180deg);
+    -moz-transform: rotateX(180deg);
+    -o-transform: rotateX(180deg);
     transform: rotateX(180deg); }
   .html5-3d-context.flipped-y {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
     transform: rotateY(180deg); }
 
 .preserve-3d {
@@ -4594,6 +4600,12 @@ th.hide-for-touch {
 @font-face {
   font-family: "Helvetica Neue Ultra Light";
   src: url("../files/HelveticaNeueLTStd-UltLt.otf"); }
+
+.hn-l-cn {
+  font-family: "Helvetica Neue Light Condensed", arial, sans-serif; }
+
+.hn-ul-cn {
+  font-family: "Helvetica Neue Ultra Light", arial, sans-serif; }
 
 form, label, .label-like {
   font-family: "Helvetica Neue Medium Condensed", arial, sans-serif;
@@ -4730,6 +4742,16 @@ ul#toppings-filter * {
   color: #191919;
   font-size: 1.6875rem; }
 
+#order-modal-content * {
+  color: #373737; }
+#order-modal-content a.modal-link {
+  font-family: "Helvetica Neue Light Condensed", arial, sans-serif;
+  font-size: 1.4375rem;
+  transition: color 0.3s, text-shadow 0.3s; }
+  #order-modal-content a.modal-link:hover {
+    color: #0779be;
+    text-shadow: 0 0 2px rgba(7, 121, 190, 0.5); }
+
 body {
   background-image: url('../img/splash/pizza-bg.jpg');
   background-size: cover;
@@ -4755,6 +4777,24 @@ button.unavailable {
 
 .inline {
   display: inline-block; }
+
+.true-hidden {
+  visibility: none;
+  display: none;
+  opacity: none; }
+
+#xtreme-modal {
+  position: fixed;
+  top: 100px;
+  left: 25%;
+  z-index: 9999999999;
+  width: 75rem;
+  min-height: 6.25rem;
+  margin-top: 6.25rem;
+  background-color: #0779be;
+  box-shadow: 0 0 64px rgba(0, 0, 0, 0.33); }
+  #xtreme-modal h1 {
+    color: #191919; }
 
 section {
   margin-bottom: 1rem; }
@@ -5353,6 +5393,7 @@ li.orbcat {
   left: 0;
   bottom: 6.875rem;
   text-align: center;
+  text-shadow: 0 0 0.375rem rgba(0, 0, 0, 0.33);
   transition: visibility 0.3s, margin-left 0.3s; }
   .float-label.exposed {
     visibility: visible;
@@ -5592,11 +5633,33 @@ div.orb-card-content {
   padding: 0.73438rem 0 0.3125rem 0.9375rem;
   line-height: 1.6875rem; }
 
-#orderOrbPreparationInstructions-wrapper {
+#OrderOrbPreparationInstructions-wrapper {
   width: 10.9375rem; }
 
-#orderOrbQuantity-wrapper {
+#OrderOrbQuantity-wrapper {
   width: 3.75rem; }
 
 input#orderOrbQuantity {
   width: 3rem; }
+
+#order-modal {
+  height: 8.40625rem;
+  width: 72.25rem;
+  position: absolute;
+  top: 4.20312rem;
+  left: 0;
+  float: left;
+  overflow-x: hidden;
+  z-index: 8999;
+  margin-left: -0.125rem; }
+  #order-modal #order-modal-content {
+    margin-top: 1.25rem;
+    height: 5.90625rem;
+    width: 73.125rem;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 0.9375rem rgba(0, 0, 0, 0.33);
+    padding: 0.3125rem;
+    border-top: 1px solid #373737;
+    border-bottom: 1px solid #373737; }
+    #order-modal #order-modal-content li {
+      padding: 0; }
