--- a/webroot/scss/3d.scss
+++ b/webroot/scss/3d.scss
@@ -15,13 +15,23 @@
   position           : absolute;
   width              : 100%;
   height             : 100%;
-  -webkit-transition : -webkit-transform 1s opacity 0.3s;
+  -webkit-transition : -webkit-transform 1s;
   -moz-transition    : -moz-transform 1s;
   -o-transition      : -o-transform 1s;
   transition         : transform 1s;
-//  &.flips-over-x { transform-origin:  bottom center; }
-  &.flipped-x { transform : rotateX(180deg); }
-  &.flipped-y { transform : rotateY(180deg); }
+  //  &.flips-over-x { transform-origin:  bottom center; }
+  &.flipped-x {
+    -webkit-transform : rotateX(180deg);
+    -moz-transform    : rotateX(180deg);
+    -o-transform      : rotateX(180deg);
+    transform         : rotateX(180deg);
+  }
+  &.flipped-y {
+    -webkit-transform : rotateY(180deg);
+    -moz-transform    : rotateY(180deg);
+    -o-transform      : rotateY(180deg);
+    transform         : rotateY(180deg);
+  }
 }
 
 .preserve-3d {
@@ -41,15 +51,17 @@
   -o-backface-visibility      : hidden;
   backface-visibility         : hidden;
 }
+
 .back-face-x {
   -webkit-transform : rotateX(180deg);
-   -moz-transform    : rotateX(180deg);
-   -o-transform      : rotateX(180deg);
-   transform         : rotateX(180deg);
+  -moz-transform    : rotateX(180deg);
+  -o-transform      : rotateX(180deg);
+  transform         : rotateX(180deg);
 }
+
 .back-face-y {
   -webkit-transform : rotateY(180deg);
-    -moz-transform    : rotateY(180deg);
-    -o-transform      : rotateY(180deg);
-    transform         : rotateY(180deg);
+  -moz-transform    : rotateY(180deg);
+  -o-transform      : rotateY(180deg);
+  transform         : rotateY(180deg);
 }
